introduce Pengpai news into main html

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                     <p><a href="./RSS_NytIntNews.xml">国际纵览</a>---<a href="https://cn.nytimes.com/rss/">原链接</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>澎湃新闻</h2>
+                <div class="content">
+                    <p><a href="./RSS_PengpaiNews.xml">澎湃新闻</a>---<a href="https://www.thepaper.cn/">原链接</a></p>
+                </div>
+            </div>
 
         </div>
     </body>
