--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                     <p><a href="./RSS_PengpaiNews.xml">澎湃新闻</a>---<a href="https://www.thepaper.cn/">原链接</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>观察者网</h2>
+                <div class="content">
+                    <p><a href="./RSS_GuanchaNews.xml">观察者网</a>---<a href="https://m.guancha.cn/">原链接</a></p>
+                </div>
+            </div>
 
         </div>
     </body>
