update index.html for dapenti.com

--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
                     <p><a href="./RSS_GuanchaNews.xml">观察者网</a>---<a href="https://m.guancha.cn/">原链接</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>喷嚏图卦</h2>
+                <div class="content">
+                    <p><a href="./RSS_PentiNews.xml">喷嚏图卦</a></p>
+                </div>
+            </div>
 
         </div>
     </body>
