Add parser for ifanr.com

--- a/index.html
+++ b/index.html
@@ -114,6 +114,12 @@
                     <p><a href="./RSS_PentiNews.xml">喷嚏图卦</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>爱范儿-早报</h2>
+                <div class="content">
+                    <p><a href="./RSS_IfanrNews.xml">爱范儿-早报</a></p>
+                </div>
+            </div>
 
         </div>
     </body>
