--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
                     <p><a href="./RSS_IfanrNews.xml">爱范儿-早报</a></p>
                 </div>
             </div>
-
+            <div class="alert">
+                <h2>都市快报-杭州新闻</h2>
+                <div class="content">
+                    <p><a href="./RSS_DskbNews.xml">都市快报-杭州新闻</a>---<a href="http://mdaily.hangzhou.com.cn/dskb/index.html">原链接</a></p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
