--- a/html/index.html
+++ b/html/index.html
@@ -138,6 +138,12 @@
                     <p><a href="./RSS_MicroHistory.xml">微历史</a>---<a href="https://botanwang.com/taxonomy/term/11792">原链接</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>新闻联播</h2>
+                <div class="content">
+                    <p><a href="./RSS_CctvNews.xml">新闻联播</a>---<a href="https://cn.govopendata.com/xinwenlianbo/">原链接</a></p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
