1. replace requests with requests.Session(); 2. update

--- a/html/index.html
+++ b/html/index.html
@@ -88,6 +88,7 @@
                 <h2>金融时报FT</h2>
                 <div class="content">
                     <p><a href="./RSS_hotstoryby7day.xml">一周十大热门文章</a>---<a href="http://www.ftchinese.com/rss/hotstoryby7day">原链接</a></p>
+                    <p><a href="./RSS_FtFocusNews.xml">今日焦点</a>---<a href="http://www.ftchinese.com/rss/news">原链接</a></p>
                 </div>
             </div>
             <div class="alert">
