--- a/html/index.html
+++ b/html/index.html
@@ -147,5 +147,16 @@
                 </div>
             </div>
         </div>
+        <div class="content">
+            <div class="alert">
+                <h2>Userscript</h2>
+                <div class="content">
+                    <p><a href="../scripts/clLinkTransfer.user.js">cl link transfer</a></p>
+                    <p><a href="../scripts/imageHider.user.js">Image Hider</a></p>
+                    <p><a href="../scripts/mrSelfChecking.user.js">MR self checking</a></p>
+                    <p><a href="../scripts/myKeZhuanZhai.user.js">KeZhuanZhaiFilter</a></p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
