--- a/html/index.html
+++ b/html/index.html
@@ -146,6 +146,12 @@
                     <p><a href="./RSS_CctvNews.xml">新闻联播</a>---<a href="https://cn.govopendata.com/xinwenlianbo/">原链接</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>草榴新闻</h2>
+                <div class="content">
+                    <p><a href="./RSS_ClTech.xml">草榴新闻</a>---<a href="https://bloghz.ddns.net/j/static/caoliu/TechNews.html">原链接</a></p>
+                </div>
+            </div>
         </div>
         <div class="content">
             <div class="alert">
