--- a/html/index.html
+++ b/html/index.html
@@ -108,6 +108,7 @@
                 <div class="content">
                     <p><a href="./RSS_PengpaiNews.xml">澎湃新闻</a>---<a href="https://www.thepaper.cn/">原链接</a></p>
                     <p><a href="./RSS_PengpaiComments.xml">澎湃评论</a>---<a href="https://www.thepaper.cn/">原链接</a></p>
+                    <p><a href="./RSS_PengpaiUserArticles.xml">澎湃号</a>---<a href="https://www.thepaper.cn/">原链接</a></p>
                 </div>
             </div>
             <div class="alert">
