1. update configuration file; 2. add feedx feed source by downloading xml file: idaily, zaobao, shiwen 3. add feed source investing.com; 4. support proxy for GeneralParser; 5. update html main page;

--- a/html/index.html
+++ b/html/index.html
@@ -131,6 +131,15 @@
                 </div>
             </div>
             <div class="alert">
+                <h2>Feedx 中转</h2>
+                <div class="content">
+                    <p><a href="./RSS_idaily.xml">每日环球视野</a></p>
+                    <p><a href="./RSS_Investing.xml">Investing.com</a></p>
+                    <p><a href="./RSS_zaobao.xml">联合早报</a></p>
+                    <p><a href="./RSS_shiwen.xml">每日古诗文</a></p>
+                </div>
+            </div>
+            <div class="alert">
                 <h2>都市快报-杭州新闻</h2>
                 <div class="content">
                     <p><a href="./RSS_DskbNews.xml">都市快报-杭州新闻</a>---<a href="http://mdaily.hangzhou.com.cn/dskb/index.html">原链接</a></p>
