1. update configuration file; 2. add Yiqing information module;

--- a/html/index.html
+++ b/html/index.html
@@ -163,6 +163,12 @@
                     <p><a href="./RSS_ClTech.xml">草榴新闻</a>---<a href="https://bloghz.ddns.net/j/static/caoliu/TechNews.html">原链接</a></p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>新冠疫情信息</h2>
+                <div class="content">
+                    <p><a href="./RSS_YiqingNews.xml">新冠疫情信息</a>---<a href="http://www.gov.cn/fuwu/fwtj.htm">原链接</a></p>
+                </div>
+            </div>
         </div>
         <div class="content">
             <div class="alert">
