1. update config file; 2. fix the wechat user article image issues: replace "data-src" by src; 3. add a new module to fetch guanchazhe user article; 4. refactor index.html

--- a/html/index.html
+++ b/html/index.html
@@ -161,6 +161,10 @@
                 <h2>观察者网</h2>
                 <div class="content">
                     <p>
+                        <a href="./RSS_GuanChaUserArticles.xml">观察者网专栏</a>|
+                        <a href="https://user.guancha.cn/user/personal-homepage?uid=794520">西西弗评论</a>
+                    </p>
+                    <p>
                         <a href="./RSS_GuanchaNews.xml">观察者网 (停更)</a>|
                         <a href="https://m.guancha.cn/">原链接</a>
                     </p>
