1. add module to fetch netease content; 2. fix the issue that same entries with different publish date exist in the one feed; 3. fix issue in wxnmh

--- a/html/index.html
+++ b/html/index.html
@@ -171,6 +171,15 @@
                 </div>
             </div>
             <div class="alert">
+                <h2>网易</h2>
+                <div class="content">
+                    <p>
+                        <a href="./RSS_NeteaseUser.xml">网易订阅 (停更)</a>|
+                        <a href="https://www.163.com/dy/media/T1604148115540.html">EarlETF</a>
+                    </p>
+                </div>
+            </div>
+            <div class="alert">
                 <h2>微历史</h2>
                 <div class="content">
                     <p>
