1. update config file; 2. add module for wall street cn news;

--- a/html/index.html
+++ b/html/index.html
@@ -171,6 +171,15 @@
                 </div>
             </div>
             <div class="alert">
+                <h2>华尔街见闻</h2>
+                <div class="content">
+                    <p>
+                        <a href="./RSS_WallStreetCnFmRadio.xml">华尔街见闻早餐FM</a>|
+                        <a href="https://rsshub.app/wallstreetcn/news/global">华尔街见闻</a>
+                    </p>
+                </div>
+            </div>
+            <div class="alert">
                 <h2>网易</h2>
                 <div class="content">
                     <p>
