1. update config; 2. add module for guanchazhe zhuanlan

--- a/html/index.html
+++ b/html/index.html
@@ -165,6 +165,14 @@
                         <a href="https://user.guancha.cn/user/personal-homepage?uid=794520">西西弗评论</a>
                     </p>
                     <p>
+                        <a href="./RSS_GuanChaZhuanLanArticles.xml">观察者网名人专栏</a>|
+                        <a href="https://www.guancha.cn/ZhengYongNian">郑永年</a>,
+                        <a href="https://www.guancha.cn/PaulKrugman">保罗·克鲁格曼</a>,
+                        <a href="https://www.guancha.cn/FuLangXiSi-FuShan">弗朗西斯·福山</a>,
+                        <a href="https://www.guancha.cn/WenTieJun">温铁军</a>,
+                        <a href="https://www.guancha.cn/XiJinPing">习近平</a>,
+                    </p>
+                    <p>
                         <a href="./RSS_GuanchaNews.xml">观察者网 (停更)</a>|
                         <a href="https://m.guancha.cn/">原链接</a>
                     </p>
