1. update config 2. change the content into different class 3. fix issues:   3.1. Pengpai site need retry to fetech content   3.2. remove audio of style==display: none

--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,8 @@
                         <a href="https://www.thepaper.cn/user_3444367">混知</a>,
                         <a href="https://www.thepaper.cn/user_4852465">Wind资讯</a>,
                         <a href="https://www.thepaper.cn/user_5070247">华尔街见闻</a>,
-                        <a href="https://www.thepaper.cn/user_3641546">色影无忌她影像</a>
+                        <a href="https://www.thepaper.cn/user_3641546">色影无忌她影像</a>,
+                        <a href="https://www.thepaper.cn/user_3454103">地球知识局</a>
                     </p>
                     <p>
                         <a href="./RSS_PengpaiGovPub.xml">澎湃政务</a> |
@@ -108,7 +109,6 @@
                     <p>
                         <a href="./RSS_PengpaiUserArticlesForKindle.xml">澎湃号Kindle阅读合集</a> |
                         <a href="https://www.thepaper.cn/user_4556608">团长说心理</a>,
-                        <a href="https://www.thepaper.cn/user_3454103">地球知识局</a>,
                         <a href="https://www.thepaper.cn/user_5126969">远川研究所</a>
                     </p>
                 </div>
