1. add module for HaoZaobao 2. update configuration; 3. update html file

--- a/html/index.html
+++ b/html/index.html
@@ -267,6 +267,23 @@
                     </p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>联合早报</h2>
+                <div class="content">
+                    <p>
+                        <a href="./RSS_zaobao.xml">联合早报精选 (停更)</a>|
+                        <a href="https://www.zaobao.com/">原链接</a>
+                    </p>
+                    <p>
+                        <a href="./RSS_ZaobaoChinaFocus.xml">联合早报-中国聚焦</a>|
+                        <a href="https://www.haozaobao.com/plus/list.php?tid=17">原链接</a>
+                    </p>
+                    <p>
+                        <a href="./RSS_ZaobaoComments.xml">联合早报-观点评论</a>|
+                        <a href="https://www.haozaobao.com/plus/list.php?tid=4">原链接</a>
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="content">
             <div class="alert">
