--- a/html/index.html
+++ b/html/index.html
@@ -156,7 +156,10 @@
                         <a href="https://api.feeddd.org/feeds/62014453dca58a380c59c4be">西西弗评论</a>,
                         <a href="https://api.feeddd.org/feeds/61285e90221f954f5e11175f">天机奇谈 </a>,
                         <a href="https://api.feeddd.org/feeds/6131e1421269c358aa0e1cad">铁头功社</a>,
-                        <a href="https://www.wxnmh.com/user-112939.htm">饭桶戴老板</a>
+                        <a href="https://api.feeddd.org/feeds/6131b9e01269c358aa0df19e">饭桶戴老板</a>
+                        <a href="https://api.feeddd.org/feeds/6131e1401269c358aa0e186f">卢克文工作室</a>
+                        <a href="https://api.feeddd.org/feeds/61d2cfe4dca58a380c3a9a8f">远川科技评论</a>
+                        <a href="https://api.feeddd.org/feeds/616102e99b888e41f5cb64fb">远川研究所</a>
                     </p>
                 </div>
             </div>
