1. fix issue of web user article for video

--- a/html/index.html
+++ b/html/index.html
@@ -297,6 +297,7 @@
                 <div class="content">
                     <p><a href="../scripts/clLinkTransfer.user.js">cl link transfer</a></p>
                     <p><a href="../scripts/imageHider.user.js">Image Hider</a></p>
+                    <p><a href="../scripts/filterTorrents.user.js">Filter torrents</a></p>
                     <p><a href="../scripts/mrSelfChecking.user.js">MR self checking</a></p>
                     <p><a href="../scripts/myKeZhuanZhai.user.js">KeZhuanZhaiFilter</a></p>
                 </div>
