--- a/html/index.html
+++ b/html/index.html
@@ -162,6 +162,11 @@
                         <a href="https://api.feeddd.org/feeds/616102e99b888e41f5cb64fb">远川研究所</a>
                     </p>
                 </div>
+                <div class="content">
+                    <p>
+                        <a href="./RSS_wechatManualPush.xml">微信公众号</a>
+                    </p>
+                </div>
             </div>
             <div class="alert">
                 <h2>观察者网</h2>
@@ -300,6 +305,7 @@
                     <p><a href="../scripts/filterTorrents.user.js">Filter torrents</a></p>
                     <p><a href="../scripts/mrSelfChecking.user.js">MR self checking</a></p>
                     <p><a href="../scripts/myKeZhuanZhai.user.js">KeZhuanZhaiFilter</a></p>
+                    <p><a href="../scripts/Torrent.Link.Regularaty.user.js">Torrent Link Regularaty</a></p>
                 </div>
             </div>
         </div>
