1. change the domain name

--- a/html/index.html
+++ b/html/index.html
@@ -231,7 +231,7 @@
                 <div class="content">
                     <p>
                         <a href="./RSS_ClTech.xml">草榴新闻 (停更)</a>|
-                        <a href="https://bloghz.ddns.net/j/static/caoliu/TechNews.html">原链接</a>
+                        <a href="https://totototot.asuscomm.com/j/static/caoliu/TechNews.html">原链接</a>
                     </p>
                 </div>
             </div>
