update config file

--- a/html/index.html
+++ b/html/index.html
@@ -165,7 +165,12 @@
                 </div>
                 <div class="content">
                     <p>
-                        <a href="./RSS_wechatManualPush.xml">微信公众号</a>
+                        <a href="./RSS_wechatManualPush.xml">微信公众号外网推送</a>
+                    </p>
+                </div>
+                <div class="content">
+                    <p>
+                        <a href="./wechatRss.xml">微信公众号内网推送</a>
                     </p>
                 </div>
             </div>
