--- a/html/index.html
+++ b/html/index.html
@@ -312,6 +312,8 @@
                     <p><a href="../scripts/mrSelfChecking.user.js">MR self checking</a></p>
                     <p><a href="../scripts/myKeZhuanZhai.user.js">KeZhuanZhaiFilter</a></p>
                     <p><a href="../scripts/Torrent.Link.Regularaty.user.js">Torrent Link Regularaty</a></p>
+                    <p><a href="../scripts/sehuatangHighlightMarker.user.js">Sehuatang Highlight Wish List</a></p>
+                    <p><a href="../scripts/挂课.user.js">挂课</a></p>
                 </div>
             </div>
         </div>
