1. update configuration file 2. add module for Zhu News

--- a/html/index.html
+++ b/html/index.html
@@ -230,6 +230,12 @@
                         <a href="https://cn.govopendata.com/xinwenlianbo/">原链接</a>
                     </p>
                 </div>
+                <div class="content">
+                    <p>
+                        <a href="./RSS_CctvNewsVideo.xml">新闻联播 (视频版)</a>|
+                        <a href="https://cn.govopendata.com/xinwenlianbo/">原链接</a>
+                    </p>
+                </div>
             </div>
             <div class="alert">
                 <h2>草榴新闻</h2>
@@ -301,6 +307,15 @@
                     </p>
                 </div>
             </div>
+            <div class="alert">
+                <h2>Telegram</h2>
+                <div class="content">
+                    <p>
+                        <a href="./RSS_ZhuNews.xml">竹新社</a>|
+                        <a href="http://192.168.119.47:1200/telegram/channel/tnews365">原链接</a>
+                    </p>
+                </div>
+            </div>
         </div>
         <div class="content">
             <div class="alert">
@@ -314,6 +329,8 @@
                     <p><a href="../scripts/Torrent.Link.Regularaty.user.js">Torrent Link Regularaty</a></p>
                     <p><a href="../scripts/sehuatangHighlightMarker.user.js">Sehuatang Highlight Wish List</a></p>
                     <p><a href="../scripts/挂课.user.js">挂课</a></p>
+                    <p><a href="../scripts/Bilibili.Notification.user.js">B站推送</a></p>
+                    <p><a href="../scripts/change.avmoo.link.to.javtrailers.user.js">修改J链接</a></p>
                 </div>
             </div>
         </div>
